bdr.BDR2.scala.error
Erreur de compilation :
BDR2:86: error: Unmatched closing brace '}' ignored here
	}
        ^